--- a/_includes/my-head.html
+++ b/_includes/my-head.html
@@ -2,6 +2,8 @@
 Code used for embedding Gumroad on the Hydejack Site. 
 Left here for reference, feel free to delete.
 -->
+<link rel="stylesheet" href="/assets/css/layout.css" type="text/css">
+
 <link rel="dns-prefetch" href="https://assets.gumroad.com">
 <script type="module">
   let p;
