--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,2 +1,2 @@
-/* minnnnnnnnnnnnnnnnnnnnafnnnnnne */
+/* sidebar */
 .sidebar-bg.sidebar-overlay::after{background : -webkit-linear-gradient(top, rgba(32,32,32,0) 0%, rgba(32,32,32,0.2) 50%, rgba(32,32,32,0) 100%);}
